--- a/style.css
+++ b/style.css
@@ -336,3 +336,32 @@ input[type="range"]:disabled::-moz-range-thumb {
     -webkit-transform: translateY(-3px);
   }
 }
+
+@keyframes shaking {
+  0% {
+    transform: translateX(0);
+  }
+  25% {
+    transform: translateY(-8px);
+  }
+  35% {
+    transform: translateY(-8px) rotate(17deg);
+  }
+  55% {
+    transform: translateY(-8px) rotate(-17deg);
+  }
+  65% {
+    transform: translateY(-8px) rotate(17deg);
+  }
+  75% {
+    transform: translateY(-8px) rotate(-17deg);
+  }
+  100% {
+    transform: translateY(0) rotate(0);
+  }
+}
+
+.shaking {
+  display: inline-block;
+  animation: shaking 1s infinite; /* 1s duration for the shake effect */
+}
